# OpenGL

./: CMakeLists.txt  main.cpp
Core/Header/: CreateGLEW.h  CreateGLFW.h
Core/Source/: CreateGLEW.cpp  CreateGLFW.cpp
